added project images

--- a/index.html
+++ b/index.html
@@ -255,9 +255,11 @@
 
 
         <div class="list-group">
-          <a href="https://www.LeulShiferaw.github.io/ProjectEuler" class="list-group-item list-group-item-action flex-column align-items-start active">
+          <a href="https://www.LeulShiferaw.github.io/ProjectEuler" class="list-group-item list-group-item-action flex-column align-items-start">
             <div class="d-flex w-100 justify-content-between">
+              <br><br/>
               <h5 class="mb-1">Project Euler Solutions</h5>
+              <img src="assets/img/projects/projectEuler.jpg" style="width: 100px" class="img-fluid">
             </div>
             <p class="mb-1">These are some of my solutions to the project euler problems.</p>
             <small>So far about 75 problems</small>
@@ -265,6 +267,7 @@
           <a href="https://www.LeulShiferaw.github.io/Chess" class="list-group-item list-group-item-action flex-column align-items-start">
             <div class="d-flex w-100 justify-content-between">
               <h5 class="mb-1">Chess Program</h5>
+              <img src="assets/img/projects/chess.png" style="width: 100px" class="img-fluid">
             </div>
             <p class="mb-1">This is an attempt to write my own 2-player Chess Software</p>
             <small class="text-muted">Currently still incomplete</small>
@@ -272,6 +275,7 @@
           <a href="https://www.LeulShiferaw.github.io/TicTacToe" class="list-group-item list-group-item-action flex-column align-items-start">
             <div class="d-flex w-100 justify-content-between">
               <h5 class="mb-1">Tic Tac Toe with MinMax</h5>
+              <img src="assets/img/projects/tictactoe.png" style="width: 100px" class="img-fluid">
             </div>
             <p class="mb-1">This is a 1 player tic tac toe game with an unbeatable AI.</p>
           </a>
