changed links to projects

--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
 
 
         <div class="list-group">
-          <a href="https://www.LeulShiferaw.github.io/ProjectEuler" class="list-group-item list-group-item-action flex-column align-items-start">
+          <a href="https://github.com/LeulShiferaw/ProjectEuler" class="list-group-item list-group-item-action flex-column align-items-start">
             <div class="d-flex w-100 justify-content-between">
               <br><br/>
               <h5 class="mb-1">Project Euler Solutions</h5>
@@ -264,7 +264,7 @@
             <p class="mb-1">These are some of my solutions to the project euler problems.</p>
             <small>So far about 75 problems</small>
           </a>
-          <a href="https://www.LeulShiferaw.github.io/Chess" class="list-group-item list-group-item-action flex-column align-items-start">
+          <a href="https://github.com/LeulShiferaw/Chess" class="list-group-item list-group-item-action flex-column align-items-start">
             <div class="d-flex w-100 justify-content-between">
               <h5 class="mb-1">Chess Program</h5>
               <img src="assets/img/projects/chess.png" style="width: 100px" class="img-fluid">
@@ -272,7 +272,7 @@
             <p class="mb-1">This is an attempt to write my own 2-player Chess Software</p>
             <small class="text-muted">Currently still incomplete</small>
           </a>
-          <a href="https://www.LeulShiferaw.github.io/TicTacToe" class="list-group-item list-group-item-action flex-column align-items-start">
+          <a href="https://github.com/LeulShiferaw/TicTacToe" class="list-group-item list-group-item-action flex-column align-items-start">
             <div class="d-flex w-100 justify-content-between">
               <h5 class="mb-1">Tic Tac Toe with MinMax</h5>
               <img src="assets/img/projects/tictactoe.png" style="width: 100px" class="img-fluid">
