--- a/index.html
+++ b/index.html
@@ -257,9 +257,8 @@
         <div class="list-group">
           <a href="https://github.com/LeulShiferaw/ProjectEuler" class="list-group-item list-group-item-action flex-column align-items-start">
             <div class="d-flex w-100 justify-content-between">
-              <br><br/>
               <h5 class="mb-1">Project Euler Solutions</h5>
-              <img src="assets/img/projects/projectEuler.jpg" style="width: 100px" class="img-fluid">
+              <img src="assets/img/projects/projectEuler.jpg" style="width: 100px">
             </div>
             <p class="mb-1">These are some of my solutions to the project euler problems.</p>
             <small>So far about 75 problems</small>
@@ -267,7 +266,7 @@
           <a href="https://github.com/LeulShiferaw/Chess" class="list-group-item list-group-item-action flex-column align-items-start">
             <div class="d-flex w-100 justify-content-between">
               <h5 class="mb-1">Chess Program</h5>
-              <img src="assets/img/projects/chess.png" style="width: 100px" class="img-fluid">
+              <img src="assets/img/projects/chess.png" style="width: 100px">
             </div>
             <p class="mb-1">This is an attempt to write my own 2-player Chess Software</p>
             <small class="text-muted">Currently still incomplete</small>
@@ -275,7 +274,7 @@
           <a href="https://github.com/LeulShiferaw/TicTacToe" class="list-group-item list-group-item-action flex-column align-items-start">
             <div class="d-flex w-100 justify-content-between">
               <h5 class="mb-1">Tic Tac Toe with MinMax</h5>
-              <img src="assets/img/projects/tictactoe.png" style="width: 100px" class="img-fluid">
+              <img src="assets/img/projects/tictactoe.png" style="width: 100px" >
             </div>
             <p class="mb-1">This is a 1 player tic tac toe game with an unbeatable AI.</p>
           </a>
@@ -287,7 +286,7 @@
 
     <!-- ======= Contact Section ======= -->
     <section id="contact" class="contact">
-      <div class="container">
+      <div class="container-fluid">
 
         <div class="section-title">
           <h2>Contact</h2>
@@ -295,7 +294,7 @@
 
         <div class="row" data-aos="fade-in">
 
-          <div class="col-lg-5 d-flex align-items-stretch">
+          <div class="col d-flex align-items-stretch">
             <div class="info">
               <div class="address">
                 <i class="bi bi-geo-alt"></i>
@@ -315,7 +314,6 @@
                 <p>+251968016976</p>
               </div>
 
-              <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12097.433213460943!2d-74.0062269!3d40.7101282!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xb89d1fe6bc499443!2sDowntown+Conference+Center!5e0!3m2!1smk!2sbg!4v1539943755621" frameborder="0" style="border:0; width: 100%; height: 290px;" allowfullscreen></iframe>
             </div>
 
           </div>
