Changed Projects to the Required Projects

--- a/index.html
+++ b/index.html
@@ -255,28 +255,26 @@
 
 
         <div class="list-group">
-          <a href="https://github.com/LeulShiferaw/ProjectEuler" class="list-group-item list-group-item-action flex-column align-items-start">
+          <a href="https://github.com/LeulShiferaw/PacmanExercise" class="list-group-item list-group-item-action flex-column align-items-start">
             <div class="d-flex w-100 justify-content-between">
-              <h5 class="mb-1">Project Euler Solutions</h5>
-              <img src="assets/img/projects/projectEuler.jpg" style="width: 100px">
+              <h5 class="mb-1">Pacman Exercise</h5>
+              <img src="assets/img/projects/pacman.png" style="width: 100px">
             </div>
-            <p class="mb-1">These are some of my solutions to the project euler problems.</p>
-            <small>So far about 75 problems</small>
+            <p class="mb-1">One of our projects for the MIT Full Stack Development Program. It moves the pacman image while at the same time going through an animation from the left end of the screen to the right end of the screen and back.</p>
           </a>
-          <a href="https://github.com/LeulShiferaw/Chess" class="list-group-item list-group-item-action flex-column align-items-start">
+          <a href="https://github.com/LeulShiferaw/RealTimeBusTracker" class="list-group-item list-group-item-action flex-column align-items-start">
             <div class="d-flex w-100 justify-content-between">
-              <h5 class="mb-1">Chess Program</h5>
-              <img src="assets/img/projects/chess.png" style="width: 100px">
+              <h5 class="mb-1">Real Time Bus Tracker</h5>
+              <img src="assets/img/projects/maps.jpg" style="width: 100px">
             </div>
-            <p class="mb-1">This is an attempt to write my own 2-player Chess Software</p>
-            <small class="text-muted">Currently still incomplete</small>
+            <p class="mb-1">One of our Projects for the MIT Full Stack Development program. Get the real time value of a bus from a server.</p>
           </a>
-          <a href="https://github.com/LeulShiferaw/TicTacToe" class="list-group-item list-group-item-action flex-column align-items-start">
+          <a href="https://github.com/LeulShiferaw/EyeExercise" class="list-group-item list-group-item-action flex-column align-items-start">
             <div class="d-flex w-100 justify-content-between">
-              <h5 class="mb-1">Tic Tac Toe with MinMax</h5>
-              <img src="assets/img/projects/tictactoe.png" style="width: 100px" >
+              <h5 class="mb-1">Eye movement Exercise</h5>
+              <img src="assets/img/projects/eyeExercise.png" style="width: 100px" >
             </div>
-            <p class="mb-1">This is a 1 player tic tac toe game with an unbeatable AI.</p>
+            <p class="mb-1">One of our projects for the MIT Full Stack Developement boot camp. Make two eyes on the screen follow your cursor around.</p>
           </a>
         </div>
         </div>
