--- a/index.html
+++ b/index.html
@@ -48,11 +48,7 @@
         <img src="assets/img/profile-img.jpg" alt="" class="img-fluid rounded-circle">
         <h1 class="text-light"><a href="index.html">Leul Shiferaw</a></h1>
         <div class="social-links mt-3 text-center">
-          <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
-          <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
-          <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
-          <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
-          <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+          <a href="https://www.linkedin.com/in/leul-shiferaw-1604b4129/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
         </div>
       </div>
 
@@ -114,8 +110,19 @@
                   <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>22</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Bachelor</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>abiyleoul3@gmail.com</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Github Username:</strong> <span>Leul Shiferaw</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>LinkedIn:</strong> <span>https://www.linkedin.com/in/leul-shiferaw-1604b4129/</span></i></li>
                 </ul>
               </div>
+              <iframe width="560" height="315" 
+                      src="https://www.youtube.com/embed/G_A7wsZZNzk" title="YouTube video player" 
+                      frameborder="0" allow="accelerometer; 
+                                             autoplay; 
+                                             clipboard-write; 
+                                             encrypted-media; 
+                                             gyroscope; 
+                                             picture-in-picture" allowfullscreen>
+              </iframe>
             </div>
           </div>
         </div>
